--- a/resources/themes/default-theme.yml
+++ b/resources/themes/default-theme.yml
@@ -26,6 +26,7 @@ link:
   font_color: #002FA7
 outline_list:
   indent: $base_font_size * 1.5
-# image:
-#   width: 90%
-#   align: center
+image:
+  align: center
+caption:
+  align: center
