--- a/resources/themes/default-theme.yml
+++ b/resources/themes/default-theme.yml
@@ -16,9 +16,9 @@ page:
   size: Letter
 base:
   font_color: #333333
-  font_family: Times-New-Roman
-  font_size: 12
-  line_height_length: 17
+  font_family: Noto Serif
+  font_size: 11
+  line_height_length: 12
   line_height: $base_line_height_length / $base_font_size
 vertical_spacing: $base_line_height_length
 heading:
@@ -35,4 +35,14 @@ image:
   align: center
 caption:
   align: center
-menu_caret_content: " <font size=\"1.15em\"><color rgb=\"b12146\">\u203a</color></font> "
+menu:
+  caret_content: " > "
+footer:
+  height: 0.75in
+  line_height: 1
+  recto:
+    center:
+      content: '{page-number}'
+  verso:
+    center:
+      content: '{page-number}'
